# heylux

./: .env.example  .gitignore  MCP_SERVER.md  README.md  pyproject.toml
fiat_lux/: __init__.py  agent.py  alerts.py  calendar.py  daemon.py  pulse.py  routines.py  scheduler.py  shortcuts.py  system_prompt.md  voice.py
fiat_lux/mcp/: circadian.py
fiat_lux/tools/: README.md  calendar_tools.py  circadian.py  hue.py  memory.py  scheduler_tools.py
fresnel/: __init__.py  agent.py  daemon.py  routines.py  shortcuts.py  system_prompt.md
fresnel/tools/: circadian.py  hue.py  memory.py
heylux/: __init__.py  agent.py  alerts.py  calendar.py  daemon.py  gui.py  pulse.py  routines.py  scheduler.py  shortcuts.py  system_prompt.md  voice.py  weather.py
heylux/mcp/: ambient.py  calendar_tools.py  circadian.py  hue.py  memory.py  scheduler_tools.py  weather_tools.py
scripts/: install-app.sh  sample-voices.py
tests/: test_alerts.py  test_calendar.py  test_candle.py  test_circadian.py  test_daemon_startup.py  test_gui.py  test_pulse.py  test_pulse_styles.py  test_routines.py  test_scheduler.py  test_shortcuts.py  test_voice.py  test_weather.py
