[project]
name = "fiat-lux"
version = "0.1.0"
description = "A chronobiology-powered lighting agent for Philips Hue"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "claude-agent-sdk",
    "edge-tts>=7.2.8",
    "phue>=1.1",
    "rich",
]

[project.optional-dependencies]
voice = [
    "openai-whisper",
    "sounddevice",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fiat_lux"]

[project.scripts]
lux = "fiat_lux.agent:main"
lux-daemon = "fiat_lux.daemon:main"
