[project]
name = "heylux"
version = "0.1.0"
description = "Hey Lux — voice-controlled smart lighting with circadian intelligence"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "claude-agent-sdk",
    "edge-tts>=7.2.8",
    "phue>=1.1",
    "rich",
]

[project.optional-dependencies]
voice = [
    "openai-whisper",
    "sounddevice",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["heylux"]

[project.scripts]
lux = "heylux.agent:main"
lux-daemon = "heylux.daemon:main"
