[project]
name = "heylux"
version = "0.1.0"
description = "Hey Lux — voice-controlled smart lighting with circadian intelligence"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "claude-agent-sdk",
    "phue>=1.1",
    "rich",
]

[project.optional-dependencies]
voice = [
    "mlx-whisper>=0.4.0",
    "sounddevice",
    "mlx-audio>=0.4.0",
]
gui = [
    "mlx-whisper>=0.4.0",
    "sounddevice",
    "mlx-audio>=0.4.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=12.1",
]

[tool.uv]
package = true
# mlx-whisper depends on tiktoken but doesn't pin a version.
# Force the version that has pre-built wheels for Apple Silicon.
override-dependencies = ["tiktoken>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["heylux"]

[project.scripts]
lux = "heylux.agent:main"
lux-daemon = "heylux.daemon:main"
lux-app = "heylux.gui:main"
lux-voice = "heylux.agent:voice_main"
